# blinkomatic

./: Blinkomatic.hs  Color.hs  Main.hs  Simulatomatic.hs  blinkomatic.cabal
tcl/: Makefile  tcl.ino
