name:                blinkomatic
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Jeremy Shaw
maintainer:          jeremy@n-heptane.com
category:            Sound
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Blinkomatic
  other-extensions:    Arrows, DeriveDataTypeable, RankNTypes
  build-depends:       base >=4.7 && <4.8,
                       bytestring >= 0.10 && < 0.11,
                       stm >=2.4 && <2.5,
                       mtl >=2.1 && <2.2,
                       netwire >=5.0 && <5.1,
                       pipes >=4.1 && <4.2,
                       nh-midi >=0.1 && <0.2,
                       nh-alsa-rawmidi >=0.1 && <0.2,
                       serialport >= 0.4  && < 0.5
  default-language:    Haskell2010

executable blinkomatic
  main-is:          Main.hs
  ghc-options:      -O2 -threaded
  default-language: Haskell2010
  build-depends:    base       >= 4.7  && < 4.8,
                    bytestring >= 0.10 && < 0.11,
                    containers >= 0.5  && < 0.6,
                    mtl        >= 2.1  && < 2.2,
                    netwire    >= 5.0  && < 5.1,
                    nh-midi    >= 0.1  && < 0.2,
                    nh-alsa-rawmidi >= 0.1 && < 0.2,
                    pipes      >=4.1   && <4.2,
                    serialport >= 0.4  && < 0.5,
                    stm        >= 2.4  && < 2.5,
                    vector     >= 0.10 && < 0.11

executable simulatomatic
  main-is:          Simulatomatic.hs
  ghc-options:      -O2 -threaded
  default-language: Haskell2010
  build-depends:    base       >= 4.7  && < 4.8,
                    bytestring >= 0.10 && < 0.11,
                    containers >= 0.5  && < 0.6,
                    GLFW-b     >= 1.4  && < 1.5,
                    mtl        >= 2.1  && < 2.2,
                    netwire    >= 5.0  && < 5.1,
                    nh-midi    >= 0.1  && < 0.2,
                    nh-alsa-rawmidi >= 0.1 && < 0.2,
                    pipes      >=4.1   && <4.2,
                    OpenGL     >= 2.9  && < 3.0,
                    serialport >= 0.4  && < 0.5,
                    stm        >= 2.4  && < 2.5,
                    time       >= 1.4  && < 1.5,
                    vector     >= 0.10 && < 0.11
